--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,14 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            python3 -m venv venv
             source venv/bin/activate
             pip install -r requirements.txt
             python test.py
       - run:
           name: Run unit tests
           command: |
+            python3 -m venv venv
             source venv/bin/activate
             python test.py
 
