--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,13 +17,12 @@ jobs:
             python3 -m venv venv
             source venv/bin/activate
             pip install -r requirements.txt
-            python test.py
       - run:
           name: Run unit tests
           command: |
             python3 -m venv venv
             source venv/bin/activate
-            python test.py
+            python -m unittest
 
 workflows:
   main:
