--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,37 @@ jobs:
       - run:
           name: Build Docker Image
           command: docker build -t $IMAGE_NAME:latest .
+  install_dependencies:
+    steps:
+      - run:
+          name: "Install Heroku CLI, if necessary"
+          command: |
+            if [[ $(command -v heroku) == "" ]]; then
+              curl https://cli-assets.heroku.com/install.sh | sh
+            else
+              echo "Heroku is already installed. No operation was performed."
+  docker-build-release:
+    parameters:
+      app-name:
+        description: "The Heroku app name to which the application should be deployed"
+        type: string
+      app-arg:
+        description: "The Heroku Dockerfile args"
+        type: string
+      app-type:
+        description: "The Heroku app type (web or worker) of the application to be deployed"
+        type: string
+        default: "web"
+    steps:
+      - run:
+          name: Login into Heroku Docker Repository
+          command: |
+            docker login --username=$HEROKU_LOGIN --password=$HEROKU_API_KEY registry.heroku.com
+      - run:
+          name: Deploy Heroku Docker Container
+          command: |
+            heroku container:push << parameters.app-type >> -a << parameters.app-name >> --arg << parameters.app-arg >>
+            heroku container:release << parameters.app-type >> -a << parameters.app-name >>
 
 workflows:
   main:
