--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
           name: Build Docker Image
           command: docker build -t $IMAGE_NAME:latest .
   install_dependencies:
+    executor: python/default
     steps:
       - run:
           name: "Install Heroku CLI, if necessary"
@@ -37,13 +38,16 @@ jobs:
             else
               echo "Heroku is already installed. No operation was performed."
   docker-build-release:
+    executor: python/default
     parameters:
       app-name:
         description: "The Heroku app name to which the application should be deployed"
         type: string
+        default: "floating-ocean-24238"
       app-arg:
         description: "The Heroku Dockerfile args"
         type: string
+        default: "none"
       app-type:
         description: "The Heroku app type (web or worker) of the application to be deployed"
         type: string
@@ -63,3 +67,5 @@ workflows:
   main:
     jobs:
       - build-and-test
+      - install_dependencies
+      - docker-build-release
