--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
               echo "Heroku is already installed. No operation was performed."
             fi
   docker-build-release:
-    executor: docker-publisher
+    executor: python/default
     steps:
       - run:
           name: Login into Heroku Docker Repository
