--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,51 +1,25 @@
 version: 2.1
-
-orbs:
-  python: circleci/python@0.2.1
-
 jobs:
-  build-and-test:
-    executor: python/default
+  test:
+    docker:
+      - image: circleci/python:3.6.4 # every job must define an image for the docker executor and subsequent jobs may define a different image.
     steps:
       - checkout
-      - python/load-cache
-      - python/install-deps
-      - python/save-cache
-      - setup_remote_docker
       - run:
-          name: Install dependencies
+          name: Install Python deps in a venv
           command: |
             python3 -m venv venv
-            source venv/bin/activate
+            . venv/bin/activate
             pip install -r requirements.txt
       - run:
-          name: Run unit tests
+          name: Runing test
           command: |
             python3 -m venv venv
-            source venv/bin/activate
+            . venv/bin/activate
+            export APP_SETTINGS="config.DevelopmentConfig"
             python -m unittest
-      - run:
-          name: Build Docker Image
-          command: docker build -t $IMAGE_NAME:latest .
-      - run:
-          name: "Install Heroku CLI, if necessary"
-          command: |
-            if [[ $(command -v heroku) == "" ]]; then
-              curl https://cli-assets.heroku.com/install.sh | sh
-            else
-              echo "Heroku is already installed. No operation was performed."
-            fi
-      - run:
-          name: Login into Heroku Docker Repository
-          command: |
-            docker login --username=$HEROKU_LOGIN --password=$HEROKU_API_KEY registry.heroku.com
-      - run:
-          name: Deploy Heroku Docker Container
-          command: |
-            heroku container:push web -a taller2airbnb-profile
-            heroku container:release web -a taller2airbnb-profile
 
 workflows:
   main:
     jobs:
-      - build-and-test
+      - test
