--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       APP_SETTINGS: config.DevelopmentInDockerConfig
       FLASK_APP: profile
       FLASK_ENV: development
+      PORT: 5000
     depends_on:
       - db
     ports:
