--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,9 @@
 [metadata]
-name = fxprofile
-version = 1.0.0
-url = https://flask.palletsprojects.com/tutorial/
-license = BSD-3-Clause
-maintainer = Pallets
-maintainer_email = contact@palletsprojects.com
-description = The basic blog app built in the Flask tutorial.
-long_description = file: README.rst
-long_description_content_type = text/x-rst
+name = profileapp
+version = 0.0.0
+url = https://taller2airbnb-profile.herokuapp.com/
+license = T2
+description = Profile Service
 
 [options]
 packages = find:
@@ -25,4 +21,4 @@ testpaths = tests
 [coverage:run]
 branch = True
 source =
-    fxprofile
+    profileapp
