--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
+            flask create-db
             export APP_SETTINGS="config.TestingWithoutDBConfig"
             coverage run -m unittest discover
             coverage report -m
