--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
             . venv/bin/activate
             export APP_SETTINGS="config.TestingWithDBConfig"
             coverage run -m unittest discover
+            coverage run -m pytest
             coverage report -m
 
   build-and-deploy:
