--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: circleci/python:3.6.4 # every job must define an image for the docker executor and subsequent jobs may define a different image.
       - image: circleci/postgres:9.6.2 # an example of how to specify a service container
+      - image: circleci/node:12.16.2
         environment:
           POSTGRES_USER: postgres
           POSTGRES_DB: postgres
