--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,14 @@ jobs:
   test:
     docker:
       - image: circleci/python:3.6.4 # every job must define an image for the docker executor and subsequent jobs may define a different image.
-      - image: circleci/node:latest
+      - image: cimg/node:15.0.1
       - image: circleci/postgres:9.6.2 # an example of how to specify a service container
         environment:
           POSTGRES_USER: postgres
           POSTGRES_DB: postgres
     steps:
       - checkout
+      - run: node --version
       - run:
           name: Install Python deps in a venv
           command: |
@@ -19,6 +20,7 @@ jobs:
       - run:
           name: Getting up fake endpoints for Google token test
           command: |
+
             npm install -g json-server
             json-server -q db.json &
       - run:
