--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   test:
     docker:
       - image: circleci/python:3.6.4 # every job must define an image for the docker executor and subsequent jobs may define a different image.
-      - image: circleci/node:latest
+      - image: circleci/node:12.16.2
       - image: circleci/postgres:9.6.2 # an example of how to specify a service container
         environment:
           POSTGRES_USER: postgres
