Trying json-server for google-user token endpoint tests v4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
           name: Getting up fake endpoints for Google token test
           command: |
             docker-compose up -d google
+            docker ps
       - run:
           name: Runing test
           command: |
