--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
       - run:
           name: Runing test
           command: |
+            docker ps
             python3 -m venv venv
             . venv/bin/activate
             export APP_SETTINGS="config.TestingWithDBConfig"
