--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,9 @@ jobs:
     docker:
       - image: circleci/python:3.6.4 # every job must define an image for the docker executor and subsequent jobs may define a different image.
       - image: fxmr/mock_server
+        auth:
+          username: fxmr  # can specify string literal values
+          password: $DOCKERHUB_PASSWORD  # or project environment variable reference
       - image: circleci/postgres:9.6.2 # an example of how to specify a service container
         environment:
           POSTGRES_USER: postgres
